# UniSocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SocketWrapperLinux.cpp  SocketWrapperLinux.hpp  SocketWrapperOsx.cpp  SocketWrapperWin.cpp  license.txt  makeLinux.sh  makeOsx.sh  makeWin.bat  server.cpp
include/: SocketWrapperLinux.hpp  SocketWrapperOsx.hpp  SocketWrapperWin.hpp  UniSocket.hpp
src/: SocketWrapper.cpp  SocketWrapperLinux.cpp  SocketWrapperOsx.cpp  SocketWrapperWin.cpp  UniSocket.cpp  client.cpp  server.cpp
